<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/quiz_play_tutorial"
    tools:context=".PlayTutorial">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/baloo"
        android:text="Let's Play!"
        android:textColor="@color/lets_play_goodluck"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/choose"
            android:layout_gravity="center"
            />


        <Button
            android:id="@+id/play"
            android:fontFamily="@font/baloo"
            android:text="@string/play_button"
            android:textColor="@color/textWhite"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_normal_press"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />

        <Button
            android:id="@+id/tutorial"
            android:fontFamily="@font/baloo"
            android:text="@string/tutorial_button"
            android:textColor="@color/textWhite"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_normal_press"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/baloo"
        android:text="@string/goodluck_text"
        android:textColor="@color/lets_play_goodluck"
        android:textSize="45sp" />

</RelativeLayout>