<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_screen_background"
    tools:context=".HomeActivity">

    <include
        android:id="@+id/toolBarID"
        layout="@layout/toolbar_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centered_linear_layout"
        android:layout_centerInParent="true"
        android:fontFamily="@font/baloo"
        android:text="@string/topic_textview_title"
        android:textColor="@color/textWhite"
        android:textSize="50sp"
        android:layout_marginBottom="25dp"
        />
    <LinearLayout
        android:id="@+id/centered_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/permutationID"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/combinatorics"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic_one"
                        android:fontFamily="@font/baloo"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="10dp"
                        android:background="@color/view_background"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/start_topic_one" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/combinationsID"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/fractal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic_two"
                        android:fontFamily="@font/baloo"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="10dp"
                        android:background="@color/view_background"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/start_topic_two" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/combinationFormID"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/protractor"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic_three"
                        android:fontFamily="@font/baloo"
                        android:textStyle="bold"
                        android:textSize="10sp"
                        android:layout_marginTop="10dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="10dp"
                        android:background="@color/view_background"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/start_topic_three" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/permComID"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/pyramid"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic_four"
                        android:fontFamily="@font/baloo"
                        android:textStyle="bold"
                        android:textSize="8sp"
                        android:layout_marginTop="10dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_margin="10dp"
                        android:background="@color/view_background"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/start_topic_four" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>